package repositories;

public class BuyerRepository {
}
