package repositories;

public class TicketRepository {
}
